Fix header icon being too high

--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@ input {
 .header {
   background-color: black;
   padding: 4px 8px;
+  font-size: 0;
 }
 .header > img {
   max-height: 46px;
